Adds eject emoji

--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -123,7 +123,7 @@
     <div class="header-left">ETH QnA</div>
     <div class="header-right">
       <!-- Display logged-in user's profile info for logout -->
-      <a href="{{ url_for('logout') }}">{{ user.name or user.email }}</a>
+      <a href="{{ url_for('logout') }}">{{ user.name or user.email }} ⏏️</a>
     </div>
   </header>
   
