--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -222,8 +222,8 @@
         "Feel free to ask me anything about these documents and I'll do my best to help.\n" +
         "Keep in mind that I'm a simple bot, so I may occasionally make mistakes.\n" +
         "You can use me to extract information, compare data, or summarize content.\n" +
-        "The document on the right will update to the most relevant page based on your query.\n" +
-        "I might not capture every detail, like usernames (e.g., Bobthespnge1) or certain acronyms, so please be aware of that!";
+        "The document on the right will try to update to the most relevant page based on your query.\n" +
+        "I might not capture every detail, like usernames (e.g., Bobthesponge1) or certain acronyms, so please be aware of that!";
       
       var chatMessages = document.getElementById("chat-messages");
       var botMessageDiv = document.createElement('div');
