--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -141,7 +141,7 @@
     <div class="header-right">
       <span>{{ user.name or user.email }}</span>
       <a href="{{ url_for('logout') }}">⏏</a>
-      <a href="ethqna.html">🐰</a>
+      <a href="{{ url_for('static', filename='ethqna.html') }}">🐰</a>
     </div>
   </header>
   
