--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -140,7 +140,7 @@
     <div class="header-left">ETH QnA</div>
     <div class="header-right">
       <span>{{ user.name or user.email }}</span>
-      <a href="{{ url_for('logout') }}"> ⏏ </a><span> | </span>
+      <a href="{{ url_for('logout') }}"> ⏏ </a>
       <a href="{{ url_for('static', filename='ethqna.html') }}"> 🐰 </a>
     </div>
   </header>
